# lrgrep-example

./: .gitignore  Makefile  README.md  dune-project  test.txt
src/: dune  errors.mlyl  lexer.mll  main.ml  parser.mly
test/bad/: Makefile  dune  dune.template  input01.exp  input02.exp  input03.exp  input03.in  input04.exp  input04.in  input05.exp  input06.exp  input06.in  input07.exp  input07.in  input08.exp  input08.in  input09.exp  test00.exp  test00.in  test01.exp  test01.in  test02.exp  test03.exp  test03.in  test04.exp  test05.exp  test06.exp  test06.in  test07.exp  test07.in  test08.exp  test08.in  test09.exp  test09.in  test10.exp  test10.in  test11.exp  test11.in  test12.exp  test12.in  (+2 more)
test/good/: dune  dune.template  test00.in  test02.in  test03.in
